# agentic_vision

clip_pose_agent_starter/: AGENTS.md  CLIP_POSE_PIPELINE.md  README.md  package.xml  setup.cfg  setup.py
clip_pose_agent_starter/config/: clip_capture.yaml  oak4_pro_af_rgbd.yaml
clip_pose_agent_starter/configs/: default.yaml  hybrid_default.yaml
clip_pose_agent_starter/docs/: data_format.md
clip_pose_agent_starter/examples/data_session/: camera_poses.json  intrinsics.yaml
clip_pose_agent_starter/examples/models/: clip_model.yaml
clip_pose_agent_starter/launch/: mur620_clip_capture.launch.py  oak4_pro_af_rgbd_for_clip_capture.launch.py
clip_pose_agent_starter/scripts/: estimate_clip_pose.py  plan_capture_poses.py  run_clip_capture.sh  run_clip_pose_static_tf.sh  run_hybrid_clip_pipeline.sh  run_jparse_move_r_for_clip_capture.sh  run_oak_driver_for_clip_capture.sh  tune_clip_pose.py
clip_pose_agent_starter/src/clip_pose_pipeline/: __init__.py  capture_geometry.py  capture_geometry.py.orig  clip_object_capture_session.py  clip_object_capture_session.py.orig  detectors.py  hybrid_annotation.py  hybrid_cli.py  hybrid_geometry.py  hybrid_io.py  hybrid_pipeline.py  io.py  metrics.py  pose_fit.py  static_tf_publisher.py  transforms.py
clip_pose_agent_starter/tests/: test_auto_sequence.py  test_capture_geometry.py  test_capture_geometry.py.orig  test_hybrid_geometry.py  test_hybrid_pipeline.py
oak4_fullres_capture/: CMakeLists.txt  package.xml
oak4_fullres_capture/src/: oak4_fullres_capture_node.cpp
