<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/ament_package_xml.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oak4_fullres_capture</name>
  <version>0.1.0</version>
  <description>Triggered full-resolution still capture for the OAK4 IMX586 color camera.</description>
  <maintainer email="rosmatch@example.com">rosmatch</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>depthai_v3</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
